[package]
name = "chat_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
pyo3 = "0.16.4"
lazy_static = "1.4.0"
parking_lot = "0.12.0"
rand = "0.8.5"
